Changed row drag and drop handling; workaround for Chromium bug where the draggable item placeholder captures parts of any other dom element that overlaps it (making the dragging row ghost drag look weird with the OP-Export panel open).

--- a/src/main.css
+++ b/src/main.css
@@ -1651,6 +1651,9 @@ tr.selected {
     /*background-color: #cb9d5b0d;*/
     background-color: #cb9d5b14;
 }
+tr.drag-offset {
+    box-shadow: inset 0 12px 0 #3f3a34;
+}
 td.waveform-td:has(canvas) {
     width: 180px;
 }
